# srv03rtm-cmake-llvm-poc

./: .gitignore  CMakeLists.txt  README.md  clang-cl-msvc-i386.cmake  flake.nix
winmine/: CMakeLists.txt  menu.inc
